Switched to 7.0 for scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,6 +13,9 @@ coding_style:
         additive: false
         concatenation: true
 build:
+  environment:
+    php:
+      version: 7.0
   tests:
     override:
       -
