--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,14 +12,7 @@ coding_style:
       around_operators:
         additive: false
         concatenation: true
-build:
-  environment:
-    php:
-      version: 7.1.0
-  tests:
-    override:
-      -
-        command: 'phpunit --coverage-clover=cov'
-        coverage:
-          file: 'cov'
-          format: 'clover'
+tools:
+  external_code_coverage:
+    timeout: 600
+    runs: 3
