--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ php:
   - hhvm
   - nightly
 install: composer install -n --no-interaction
+script:
+  - phpunit --coverage-text --coverage-clover=coverage.clover
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
